Fixes : NHMEC-137 Event's title not clickable in IE NHMEC-138 Adds truncation to event's title based on max word limit

--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
@@ -6364,16 +6364,9 @@ h6 {
 /** NHMEC-6: EVENTS CALENDAR SEARCH RESULTS PARTIAL **/
 .event--calendar--search--result .event--calendar--search--result--title {
   padding: 0.5em 0.7em 0 0.7em;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 .event--calendar--search--result .event--calendar--search--result--description {
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+  max-height: 6.2em;
 }
 .event--calendar--search--result .event--calendar--search--result--item--content {
   padding: 0.5em 1.25em;
